# MyPracticeInOne

./: .gitignore  .gitmodules  ASQ.json  DI.json  FIB_R.json  HCS.json  HIW.json  MA_L.json  MA_R.json  RA.json  README.md  RL.json  RP.json  RS.json  SA_L.json  SA_R.json  SMW.json  SST.json  SWT.json  WE.json  WFD.json  dl.sh  download_files.py  generate_table.py  index.android.js  index.ios.js  package.json
AdventOfCode/: README.md
AdventOfCode/tmpl/: JavaTmpl.java
Crackmes/: .gitignore
GameDev/cocos2d-x/: .gitignore
JustPractice/golang/gotour/: BUILD.bazel  WORKSPACE  functions.go  go.mod  helloworld.go
LeetCode/: README.md
LeetCode/golang/: README.md  test.sh
LeetCode/jvm/: pom.xml
LeetCode/src/: Solution.java  Test.java  Test1.java  Test2.java
MachineLearning/PyNeurGen/: lib_sample.py  narx_try.py  pyneurgen_try.py  readme.txt
MachineLearning/TensorFlow/: lltm_mlp.py  lltm_mlp_heaveinput.py  test.py
MobileCrawlers/ptehkj/: README.md  app_helper.py  ptecrawler.py
MobileFrameworks/Xposed/: build.gradle  dumpui.sh  gettopactivityname.sh
MobileFrameworks/react-native/: README.md  app.json  index.android.js  index.ios.js  package-lock.json  (+1 more)
TopCoderTraning/: README.md
android/: settings.gradle
app/: MainActivity.js
data/: README.md
downloads/: HIW.json  MA_L.json  SMW.json
exercism.io/: .gitignore
testdata/: 10582.html  11359.html  12394.html  12778.html  13884.html  1799.html  1965.html  2292.html  2330.html  2356.html  2417.html  2983.html  4496.html  5879.html  6517.html  6750.html  6872.html  7428.html  7585.html  8706.html
(+2597 files in other folders)
