load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "functions.go",
        "helloworld.go",
    ],
    importpath = "./",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "gotour",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
