load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "gofunc",
    srcs = [
        "functions.go",
    ],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "gotour",
    srcs = [
        "helloworld.go",
    ],
    visibility = ["//visibility:public"],
)
